--- a/src/pCloudPhotoOrganizer/Views/SettingsPage.xaml
+++ b/src/pCloudPhotoOrganizer/Views/SettingsPage.xaml
@@ -40,5 +40,31 @@
                 BackgroundColor="DodgerBlue"
                 TextColor="White" />
 
+    <BoxView HeightRequest="1" Color="#DDDDDD" />
+
+    <Label Text="pCloud"
+           FontAttributes="Bold"
+           FontSize="Medium" />
+
+    <Entry x:Name="PCloudUserEntry"
+           Placeholder="Email ou nom d'utilisateur pCloud" />
+
+    <Entry x:Name="PCloudTokenEntry"
+           Placeholder="Mot de passe ou token API"
+           IsPassword="True" />
+
+    <Entry x:Name="PCloudRootEntry"
+           Placeholder="Dossier racine pCloud pour les albums (ex: /Photos)" />
+
+    <Label x:Name="PCloudErrorLabel"
+           TextColor="Red"
+           FontSize="Small"
+           IsVisible="False" />
+
+    <Button Text="Sauvegarder pCloud"
+            Clicked="OnSavePCloudClicked"
+            BackgroundColor="DodgerBlue"
+            TextColor="White" />
+
   </VerticalStackLayout>
 </ContentPage>
