--- a/src/pCloudPhotoOrganizer/Views/GalleryPage.xaml
+++ b/src/pCloudPhotoOrganizer/Views/GalleryPage.xaml
@@ -10,13 +10,19 @@
     <ToolbarItem Text="Vers pCloud" Clicked="OnSendToPCloudClicked" />
   </maui:ContentPage.ToolbarItems>
 
-  <RefreshView IsRefreshing="{Binding IsLoading}" Command="{Binding RefreshCommand}">
-    <CollectionView
-            x:Name="GalleryCollectionView"
-            ItemsSource="{Binding Groups}"
-            IsGrouped="True"
-            SelectionMode="None"
-            Margin="10">
+  <Grid RowDefinitions="Auto,*">
+    <StackLayout Orientation="Horizontal" Padding="10,5" Spacing="10" IsVisible="{Binding IsUploading}">
+      <ActivityIndicator IsRunning="{Binding IsUploading}" VerticalOptions="Center" />
+      <Label Text="{Binding UploadStatus}" VerticalOptions="Center" LineBreakMode="TailTruncation" />
+    </StackLayout>
+
+    <RefreshView Grid.Row="1" IsRefreshing="{Binding IsLoading}" Command="{Binding RefreshCommand}">
+      <CollectionView
+              x:Name="GalleryCollectionView"
+              ItemsSource="{Binding Groups}"
+              IsGrouped="True"
+              SelectionMode="None"
+              Margin="10">
 
       <!-- Vue quand il n’y a aucune photo -->
       <CollectionView.EmptyView>
@@ -103,7 +109,9 @@
 
               <!-- Clic sur le rond = sélection / désélection de toutes les photos -->
               <Frame.GestureRecognizers>
-                <TapGestureRecognizer Tapped="OnGroupSelectionTapped" />
+                <TapGestureRecognizer
+                  Command="{Binding Source={x:Reference GalleryCollectionView}, Path=BindingContext.ToggleGroupSelectCommand}"
+                  CommandParameter="{Binding .}" />
               </Frame.GestureRecognizers>
             </Frame>
 
@@ -186,6 +194,7 @@
         <GridItemsLayout Orientation="Vertical" Span="3" />
       </CollectionView.ItemsLayout>
 
-    </CollectionView>
-  </RefreshView>
+      </CollectionView>
+    </RefreshView>
+  </Grid>
 </maui:ContentPage>
