Ajout d’un service de journalisation et d’une page de consultation des logs Ajoute le service AppLogService, une page de visualisation des logs (LogsPage et son code-behind), de nouvelles icônes/ressources (œil ouvert/fermé, rafraîchir, journal) et intègre l’ensemble à l’application via MauiProgram, AppShell et les vues/ressources mises à jour.

--- a/src/pCloudPhotoOrganizer/AppShell.xaml
+++ b/src/pCloudPhotoOrganizer/AppShell.xaml
@@ -9,17 +9,33 @@
   <ShellContent
         Title="Galerie"
         Route="gallery"
+        Icon="icon-gallery.svg"
         ContentTemplate="{DataTemplate views:GalleryPage}" />
 
   <!-- Page de paramètres : choix des dossiers -->
   <ShellContent
         Title="Paramètres"
         Route="settings"
+        Icon="icon-settings.svg"
         ContentTemplate="{DataTemplate views:SettingsPage}" />
 
+  <!-- Page de logs -->
+  <ShellContent
+        Title="Logs"
+        Route="logs"
+        Icon="icon_logs.svg"
+        ContentTemplate="{DataTemplate views:LogsPage}" />
+
+  <!-- Page à propos -->
   <ShellContent
         Title="À propos"
         Route="about"
+        Icon="icon-about.svg"
         ContentTemplate="{DataTemplate views:AboutPage}" />
+
+  <MenuItem
+      Text="Quitter"
+      IconImageSource="icon-exit.svg"
+      Clicked="OnQuitClicked" />
 
 </Shell>
