--- a/src/pCloudPhotoOrganizer/AppShell.xaml
+++ b/src/pCloudPhotoOrganizer/AppShell.xaml
@@ -9,14 +9,14 @@
   <ShellContent
         Title="Galerie"
         Route="gallery"
-        Icon="icon-gallery.svg"
+        Icon="icon_gallery.svg"
         ContentTemplate="{DataTemplate views:GalleryPage}" />
 
   <!-- Page de paramètres : choix des dossiers -->
   <ShellContent
         Title="Paramètres"
         Route="settings"
-        Icon="icon-settings.svg"
+        Icon="icon_settings.svg"
         ContentTemplate="{DataTemplate views:SettingsPage}" />
 
   <!-- Page de logs -->
@@ -30,12 +30,12 @@
   <ShellContent
         Title="À propos"
         Route="about"
-        Icon="icon-about.svg"
+        Icon="icon_about.svg"
         ContentTemplate="{DataTemplate views:AboutPage}" />
 
   <MenuItem
       Text="Quitter"
-      IconImageSource="icon-exit.svg"
+      IconImageSource="icon_exit.svg"
       Clicked="OnQuitClicked" />
 
 </Shell>
