--- a/src/pCloudPhotoOrganizer/Views/GalleryPage.xaml
+++ b/src/pCloudPhotoOrganizer/Views/GalleryPage.xaml
@@ -123,7 +123,7 @@
               <!-- Clic sur le rond = sélection / désélection de toutes les photos -->
               <Frame.GestureRecognizers>
                 <TapGestureRecognizer
-                  Command="{Binding Source={x:Reference GalleryPageRoot}, Path=ViewModel.ToggleGroupSelectCommand}"
+                  Command="{Binding Source={x:Reference GalleryPageRoot}, Path=BindingContext.ToggleGroupSelectCommand}"
                   CommandParameter="{Binding .}" />
               </Frame.GestureRecognizers>
             </Frame>
@@ -188,7 +188,7 @@
 
                     <Frame.GestureRecognizers>
                       <TapGestureRecognizer
-                Command="{Binding Source={x:Reference GalleryPageRoot}, Path=ViewModel.ToggleSelectCommand}"
+                Command="{Binding Source={x:Reference GalleryPageRoot}, Path=BindingContext.ToggleSelectCommand}"
                 CommandParameter="{Binding .}" />
                     </Frame.GestureRecognizers>
                   </Frame>
